# snake-ai

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  neuroevolution-snake.typ  refs.yml  run.sh
.github/workflows/: release.yml
src/: gpu.rs  gui.rs  leaderboard.rs  llm.rs  main.rs  neural_net.rs  population.rs  protocol.rs  shared.rs  snake.rs  stage.rs
static/: index.html
